feat:exercicios de js

--- a/DOM/html x js/index.html
+++ b/DOM/html x js/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM - Javascript</title>
+    <title>DOM - Javascrip</title>
 </head>
 <body>
     
-    <button onclick="alert('Abrindo a Janela inline')">Clique aqui!</button>
+    <button onclick="alert('Abrindo Janela inline')">Clique aqui!</button>
 
-    <button id="abreAlert">Abre Janela Incorporado</button>
+    <button id="abreAlert">Abre Janela Incorporada</button>
 
-    <button id="abreAlertVinculado">Abre janela Vinculado</button>
+    <button id="abreAlertVinculado">Abre Janela Vinculado</button>
 
     <script>
         const btAbreAlert = document.getElementById("abreAlert")
 
-       // console.log("botão alert",btAbreAlert)
+        // console.log("botão alert", btAbreAlert)
 
-       btAbreAlert.addEventListener("click", ()=>{
-        alert("abrindo janela no codigo incorporado")
-       })
+        btAbreAlert.addEventListener("click",()=>{
+            alert("abrindo janela no codigo incorporado")
+        })
+
     </script>
 
-    <script src="script.js"></script>
+
+<script src="scripts.js"></script>
 
 </body>
 </html>
